--- a/html/CDN-links.html
+++ b/html/CDN-links.html
@@ -1,5 +1,7 @@
 <!-- Foundation 6.2.4 -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
+<!-- Foundation 6.1.2 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css">
 
 <!-- Font Awesome 4.5.0 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
